--- a/src/main/webapp/views/login.html
+++ b/src/main/webapp/views/login.html
@@ -21,7 +21,10 @@
 				</label>
 			    <input ng-model = "user.password" required type="password" id="password" name="password">
 			</div>
-            <button name="submit" type="submit">Log in</button>
+			
+			<div class="form-buttons">
+            	<button name="submit" type="submit">Log in</button>
+			</div>
         </form>
     </div>
 
