--- a/src/main/webapp/views/profile.html
+++ b/src/main/webapp/views/profile.html
@@ -8,7 +8,7 @@
 	        <input type="text" ng-minlength="2" ng-maxlength="200" required id="username" name="username" ng-model="user.name">
 	    </div>
 		
-	    <div ng-messages="profileForm.username.$error" class="formItem" role="alert">
+	    <div ng-messages="profileForm.username.$error" ng-if="profileForm.username.$touched" class="formItem" role="alert">
 	      <div ng-message="required" class="alert alert-warning">You must provide a name</div>
 	      <div ng-message="minlength" class="alert alert-warning">Your name is too short</div>
 	      <div ng-message="maxlength" class="alert alert-warning">Your name is too long</div>
@@ -19,7 +19,7 @@
 	        <input type="email" required id="emailAddress" name="emailAddress" ng-model="user.email">
 	    </div>
 		
-	    <div ng-messages="profileForm.emailAddress.$error" class="formItem" role="alert">
+	    <div ng-messages="profileForm.emailAddress.$error"  ng-if="profileForm.emailAddress.$touched" class="formItem" role="alert">
 		      <div ng-message="required" class="alert alert-warning">You need to provide an email address</div>
 		      <div ng-message="email" class="alert alert-warning">You need to provide a valid email address</div>
 	    </div>
@@ -38,8 +38,10 @@
             <label for="odbcpasswordconfirm">Confirm ODBC Password </label>
             <input type="password" id="confirmodbcpassword" name="confirmodbcpassword">
         </div>
-    
-	    <button name="submit" type="submit">Save changes</button>
+		
+    	<div class="form-buttons">
+	    	<button name="submit" type="submit" ng-disabled="profileForm.$invalid">Save changes</button>
+		</div>
 	</form>
 <div>
 	
