--- a/src/main/webapp/views/register.html
+++ b/src/main/webapp/views/register.html
@@ -15,7 +15,7 @@
 			    <input ng-model = "user.name" ng-minlength="2" ng-maxlength="200" required type="text" id="signupName" name="signupName">
 			</div>
 			
-		    <div ng-messages="registrationForm.signupName.$error" class="formItem" role="alert">
+		    <div ng-messages="registrationForm.signupName.$error" ng-if="registrationForm.signupName.$touched" class="formItem" role="alert">
 		      <div ng-message="required" class="alert alert-warning">You need to provide a name</div>
 		      <div ng-message="minlength" class="alert alert-warning">Your name is too short</div>
 		      <div ng-message="maxlength" class="alert alert-warning">Your name is too long</div>
@@ -30,12 +30,14 @@
 			    <input ng-model = "user.email" required type="email" id="signupEmail" name="signupEmail">
 			</div>
 			
-		    <div ng-messages="registrationForm.signupEmail.$error" class="formItem" role="alert">
+		    <div ng-messages="registrationForm.signupEmail.$error" ng-if="registrationForm.signupEmail.$touched" class="formItem" role="alert">
 		      <div ng-message="required" class="alert alert-warning">You need to provide an email address</div>
 		      <div ng-message="email" class="alert alert-warning">You need to provide a valid email address</div>
 		    </div>
 
-            <button name="submit" type="submit">Register</button>
+			<div class="form-buttons">
+            	<button name="submit" type="submit" ng-disabled="registrationForm.$invalid">Register</button>
+			</div>
         </form>
     </div>
 
