--- a/src/main/webapp/views/signup.html
+++ b/src/main/webapp/views/signup.html
@@ -13,13 +13,14 @@
 					<span class="explanation">Your name in the form you would like it to appear within the ORDS system</span>
 				</label>
 			    <input ng-model = "user.name" ng-minlength="2" ng-maxlength="200" required type="text" id="signupName" name="signupName">
+				
+			    <div ng-messages="signUpForm.signupName.$error" ng-if="signUpForm.signupName.$touched" class="formItem" role="alert">
+			      <div ng-message="required" class="alert alert-warning">You need to provide a name</div>
+			      <div ng-message="minlength" class="alert alert-warning">Your name is too short</div>
+			      <div ng-message="maxlength" class="alert alert-warning">Your name is too long</div>
+			    </div>
 			</div>
 			
-		    <div ng-messages="registrationForm.signupName.$error" class="formItem" role="alert">
-		      <div ng-message="required" class="alert alert-warning">You need to provide a name</div>
-		      <div ng-message="minlength" class="alert alert-warning">Your name is too short</div>
-		      <div ng-message="maxlength" class="alert alert-warning">Your name is too long</div>
-		    </div>
 
 
 			<div class="formItem">
@@ -28,26 +29,33 @@
 					<span class="explanation">This is where notifications relating to your ORDS account will be sent. For members of the University of Oxford, this should normally be your Oxford email address. </span>
 				</label>
 			    <input ng-model = "user.email" required type="email" id="signupEmail" name="signupEmail">
+				
+			    <div ng-messages="signUpForm.signupEmail.$error" ng-if="signUpForm.signupEmail.$touched" class="formItem" role="alert">
+			      <div ng-message="required" class="alert alert-warning">You need to provide an email address</div>
+			      <div ng-message="email" class="alert alert-warning">You need to provide a valid email address</div>
+			    </div>
 			</div>
 			
-		    <div ng-messages="registrationForm.signupEmail.$error" class="formItem" role="alert">
-		      <div ng-message="required" class="alert alert-warning">You need to provide an email address</div>
-		      <div ng-message="email" class="alert alert-warning">You need to provide a valid email address</div>
-		    </div>
+
 			
 			<div class="formItem">
-			    <label for="description">
+			    <label for="password">
 					 Password  <span class="important">*</span>
 					<span class="explanation">This is the password you'll use to log in.</span>
 				</label>
 			    <input ng-model = "user.passwordRequest" required type="password" id="password" name="password">
+				
+			    <div ng-messages="signUpForm.password.$error" ng-if="signUpForm.password.$touched" class="formItem" role="alert">
+			      <div ng-message="required" class="alert alert-warning">You need to provide a password</div>
+			    </div>
 			</div>
 			
-		    <div ng-messages="registrationForm.signupEmail.$error" class="formItem" role="alert">
-		      <div ng-message="required" class="alert alert-warning">You need to provide a password</div>
-		    </div>
 
-            <button name="submit" type="submit">Register</button>
+			
+			<div class="form-buttons">
+            	<button name="submit" type="submit" ng-disabled="signUpForm.$invalid">Register</button>
+			</div>
+			
         </form>
     </div>
 
