--- a/src/main/webapp/views/invite.html
+++ b/src/main/webapp/views/invite.html
@@ -20,6 +20,20 @@
 		      <div ng-message="minlength" class="alert alert-warning">Your name is too short</div>
 		      <div ng-message="maxlength" class="alert alert-warning">Your name is too long</div>
 		    </div>
+			
+			<div ng-if="needsPassword">
+				<div class="formItem">
+				    <label for="password">
+						 Password  <span class="important">*</span>
+						<span class="explanation">This is the password you'll use to log in.</span>
+					</label>
+				    <input ng-model = "user.passwordRequest" required type="password" id="password" name="password">
+				
+				    <div ng-messages="signUpForm.password.$error" ng-if="signUpForm.password.$touched" class="formItem" role="alert">
+				      <div ng-message="required" class="alert alert-warning">You need to provide a password</div>
+				    </div>
+				</div>
+			</div>
 
 			<div class="form-buttons">
             	<button name="submit" type="submit" ng-disabled="registrationForm.$invalid">Register</button>
