--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -13,7 +13,7 @@
 	<td>Records #:{{startRow}} to {{lastRow}} of {{maxRows}}</td>
 	<td ng-if="lastRow < maxRows"><button class="button" ng-click="loadNext()">Next</button></td>
 	<td>Page: {{pagePosition}} of {{pages}}</td>
-	<td>Go to record: <input type="text" ng-model="newStart" ng-focus="startFrom()"/></td>
+	<td>Go to record: <input type="text" ng-model="newStart"  ng-keyup="$event.keyCode == 13 && startFrom()"/></td>
 </tr>
 </table>
 <div class="contDiv">
@@ -33,14 +33,14 @@
 			<tbody>
 				<tr ng-repeat="row in tableData.rows | filter:doFilter | orderBy:sortBy">
 					<td class="tdScroll" ng-repeat="column in tableData.columnsByIndex"><input type="text" ng-value="getColumnDataForRow(column, row)"/></td>
-					<td class="tdScroll" style="min-width:100px; width:100px;"><img src="images/delete_icon.png" alt="Delete Row" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)"/>&nbsp;&nbsp;<a href="#/row/{{project.projectId}}/{{project.projectDatabaseId}}/{{dbId}}/{{instance}}/{{tableName}}/{{primaryKey}}/{{row.cell[primaryKey].value}}"><img src="images/pencil.png" alt="Edit Row"/></a></td>
+					<td class="tdScroll" style="min-width:100px; width:100px;"><img src="images/delete_icon.png" alt="Delete Row" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)"/>&nbsp;&nbsp;<a href="#/row/{{project.projectId}}/{{projectDatabase.logicalDatabaseId}}/{{dbId}}/{{instance}}/{{tableName}}/{{primaryKey}}/{{row.cell[primaryKey].value}}"><img src="images/pencil.png" alt="Edit Row"/></a></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 </div>
 
-<p><div><a class="button"  href="">Add Row</a></div></p>
+<p><div><a class="button"  href="#/row/{{project.projectId}}/{{projectDatabase.logicalDatabaseId}}/{{dbId}}/{{instance}}/{{tableName}}/{{primaryKey}}">Add Row</a></div></p>
 <div class=filterArea>Filter: 
 <select ng-model="filterField">
 <option ng-repeat="column in tableData.columnsByIndex">{{column.columnName}}</option>
