--- a/src/main/webapp/project/components/projectform/projectform.html
+++ b/src/main/webapp/project/components/projectform/projectform.html
@@ -23,13 +23,13 @@
 
 <div class="formItem">
     <label for="startDate">Start date<span class="explanation">The date the project started</span></label>
-    <input ng-model="project.startDate" type="text" id="startDate" name="startDate" class="tcal tcalInput" value="">
+    <input ng-model="project.startDate" type="date" id="startDate" name="startDate" class="tcal tcalInput" value="">
 </div>
 
 
 <div class="formItem">
     <label for="endDate">End date<span class="explanation">The actual or anticipated end date of the project</span></label>
-    <input ng-model="project.endDate" type="text" id="endDate" name="endDate" class="tcal tcalInput" value="">
+    <input ng-model="project.endDate" type="date" id="endDate" name="endDate" class="tcal tcalInput" value="">
 </div>
 
 <div class="formItem">
@@ -43,7 +43,7 @@
     <input ng-model="project.odbc" type="checkbox" name="odbcSet" id="odbcSet" value="odbc">
 </div>
             <div class="form-buttons">
-                    <button name="cancel" type="submit" ng-click="#/projects/">Cancel</button>
+                    <a class="button" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
                     <button name="submit" type="submit" ng-disabled="projectForm.$invalid">Save</button>
                 
             </div>
