Reversable table sorting, internal changes to the way the ui builds the reference column select which makes it faster and more robust

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -720,6 +720,12 @@ padding: 0 0.3em ;
 .bottomDiv {height: 400px; overflow: scroll; }
 .bottomDiv tbody:nth-child(odd) {background: #aaaaaa}
 
+.colHead {
+	width:138px;
+	height:auto;
+	cursor:pointer;
+}
+
 
 .tdFixed {  
 	background-color: #f1f1f1;
