Fixed model of checkbox to match the odbcSet field

--- a/src/main/webapp/project/components/projectform/projectform.html
+++ b/src/main/webapp/project/components/projectform/projectform.html
@@ -47,7 +47,7 @@
            
 <div class="formItem">
     <label for="odbcSet">Enable ODBC access for project<span class="small">If this box is checked, project members will be able to access project data via ODBC (Open Database Connectivity), potentially bypassing the ORDS interface. <br> <a href="http://help.it.ox.ac.uk/research/ords/odbc" target="_blank">More information about ORDS and ODBC connections</a>.</span></label>
-    <input ng-model="project.odbc" type="checkbox" name="odbcSet" id="odbcSet" value="odbc">
+    <input ng-model="project.odbcSet" type="checkbox" name="odbcSet" id="odbcSet">
 </div>
             <div class="form-buttons">
                     <a class="button" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
