Enabled merging TEST into MAIN, also fixed issue with views and redirects when deleting a database

--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -132,7 +132,7 @@
 			    <a class="button delete" ng-really-message="Please confirm that you wish to delete this test database version. This action cannot be undone." ng-really-click="deleteTestDatabase()">Delete</a>
 			</div>
 		    <div>
-		        <a class="ovalbutton" ng-click"mergeTestToMain()">Make this the main database</a>
+		        <a class="ovalbutton" ng-click="mergeTestToMain()">Make this the main database</a>
 		    </div>
 		</div>
 		
