added datasets to search results

--- a/src/main/webapp/views/searchresults.html
+++ b/src/main/webapp/views/searchresults.html
@@ -2,7 +2,7 @@
 	<span class="breadcrumbs youarehere">Search Results</span>
 </div>
 
-<h1>ORDS Project List</h1>
+<h1>Projects</h1>
 	<p><span ng-show="results.$resolved">There are {{results.length}} project(s) that have been marked as open and completely satisfy your search criteria (if entered)</span><span ng-hide="results.$resolved">Loading…</span></p>
 
  <div class="homepage">
@@ -17,7 +17,6 @@
 				    <th style="width: 200px">Description</th>
 				    <th style="width: 200px">Project Owner</th>
 				    <th style="width: 80px">Contact</th>
-				    <th style="width: 400px">Public Datasets</th>
 				</tr>
 				
 				<tr ng-hide="results.$resolved">
@@ -39,14 +38,48 @@
 				                <a href="#/contact/{{project.projectId}}">Contact {{project.user.name}}</a>
 				            </div>
 				    </td>
-				    <td>TODO datasets</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	
 	<div ng-show="results.$resolved"><dir-pagination-controls template-url="lib/pagination.tpl.html"></dir-pagination-controls></div>
+
+
+<h1>Datasets</h1>
+	<p><span ng-show="datasetResults.$resolved">There are {{datasetResults.length}} dataset(s) that have been marked as open and completely satisfy your search criteria (if entered)</span><span ng-hide="datasetResults.$resolved">Loading…</span></p>
+
+ <div class="homepage">
 	
+
+	
+	<div class="informationBubble">
+	     <table class="fullWidthTable">
+            <tbody>
+				<tr>
+				    <th style="width: 200px">Dataset Name</th>
+				    <th style="width: 200px">Description</th>
+				</tr>
+				
+				<tr ng-hide="datasetResults.$resolved">
+					<td colspan="5" class=“icon-loader spin”>Loading…</td>
+				</tr>
+				
+				<tr ng-show="datasetResults.$resolved" dir-paginate="dataset in datasetResults | itemsPerPage: 10 track by dataset.viewName">
+		    		<td>
+				        {{dataset.viewName}}
+				    </td>
+				    <td>
+				        {{dataset.viewDescription}}
+				    </td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	
+	<div ng-show="datasetResults.$resolved"><dir-pagination-controls template-url="lib/pagination.tpl.html"></dir-pagination-controls></div>
+	
+		
 	<stats></stats>
 
 </div> <!-- .homepage closes -->
