lots of appearance tweaks and improvements

--- a/src/main/webapp/components/footer/footer.html
+++ b/src/main/webapp/components/footer/footer.html
@@ -6,12 +6,10 @@
         <a href="http://ords.ox.ac.uk/documentation.xml">
             Help
         </a> | 
-        <a href="/ordsProjectNode/about.jsp">
+        <a href="http://ords.ox.ac.uk/">
             About us
         </a> | 
         <a href="mailto:ords@it.ox.ac.uk">
             Contact us
         </a>
-          <div>University of Oxford</div>
-          <div>Current Version: 1.0.16 - 4759</div>
 	</div>
