--- a/src/main/webapp/components/header/header.html
+++ b/src/main/webapp/components/header/header.html
@@ -4,11 +4,10 @@
 		    <form name="searchForm" id="searchForm" ng-submit='search()' >
 			    <div>
 					<input ng-model="query" name="query" class="required" type="text" value="" maxlength="200">
-					<input type="submit" value="Search ORDS projects">
+					<button type="submit">Search projects</button>
 			    </div>
 		    </form>
 		</div>
 		<profile></profile>
-		<a id="ox-link" href="http://www.ox.ac.uk">University of Oxford</a>
 		<div class="clear"></div>
 	</div>
