--- a/src/main/webapp/components/profile/profile.html
+++ b/src/main/webapp/components/profile/profile.html
@@ -1,4 +1,4 @@
-	 <div class="header-panel user-info">
+	 <div class="user-info">
 		 <div ng-switch on="loggedIn">
 			<div ng-switch-when="yes">			
 				 <div class="user">
