--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -11,7 +11,7 @@
 
 <div class="informationBubble">
 	<div class="rightFloat">
-		<a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/newdatabase">Add new ORDS database</a>
+		<a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/newdatabase">Add new database</a>
 	</div>
     <h2>Databases</h2>
     <databases></databases>
@@ -89,7 +89,7 @@
         <tr><th>Start date</th><td>{{project.startDate | date:'longDate'}}</td></tr>
     	<tr><th>End date</th><td>{{project.endDate | date:'longDate'}}</td></tr>
         <tr>
-            <th>Details included in public ORDS project list?</th>
+            <th>Details included in public project list?</th>
             <td>
             	<span ng-hide="project.privateProject">Yes</span>
             	<span ng-show="project.privateProject">No</span>
